fix: separate footer and address spacing on right panel

--- a/src/components/InvitationScene.module.css
+++ b/src/components/InvitationScene.module.css
@@ -397,7 +397,7 @@
 .venueText {
   position: absolute;
   left: 58px;
-  top: 484px;
+  top: 478px;
   margin: 0;
   font-family: "Noto Serif", Georgia, serif;
   font-style: italic;
@@ -411,10 +411,10 @@
   position: absolute;
   left: 58px;
   right: 116px;
-  top: 521px;
+  top: 513px;
   margin: 0;
-  font-size: 14px;
-  line-height: 1.34;
+  font-size: 13px;
+  line-height: 1.28;
   color: #ef5a8a;
 }
 
@@ -422,18 +422,18 @@
   position: absolute;
   left: 58px;
   right: 116px;
-  top: 549px;
+  top: 536px;
   margin: 0;
-  font-size: 14px;
-  line-height: 1.34;
+  font-size: 13px;
+  line-height: 1.28;
   color: #ef5a8a;
 }
 
 .closingText {
   position: absolute;
-  left: 76px;
-  right: 76px;
-  bottom: 46px;
+  left: 78px;
+  right: 104px;
+  bottom: 22px;
   margin: 0;
   text-align: center;
   font-size: 14px;
@@ -443,8 +443,8 @@
 
 .cupcakeWrap {
   position: absolute;
-  right: 42px;
-  bottom: 46px;
+  right: 34px;
+  bottom: 24px;
   width: 48px;
   height: 64px;
 }
